--- a/app/src/main/res/layout/activity_sub.xml
+++ b/app/src/main/res/layout/activity_sub.xml
@@ -3,21 +3,95 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingTop="15dp"
+    android:paddingLeft="15dp"
+    android:paddingRight="15dp">
 
     <TextView
-        android:text="@string/test"
+        android:text="@string/word3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="12pt"
         android:id="@+id/textView3" />
 
-    <Button
-        android:text="@string/back"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="8pt"
-        android:id="@+id/back_button" />
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
+        android:weightSum="1">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/check_weight"
+            android:layout_gravity="center"
+            android:textSize="12pt"
+            android:gravity="center"
+            android:layout_weight="0.3" />
+
+        <TextView
+            android:text="@string/kg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView7"
+            android:textSize="12pt"
+            android:layout_weight="0.2" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/check_reps"
+            android:layout_gravity="center"
+            android:textSize="12pt"
+            android:gravity="center"
+            android:layout_weight="0.3" />
+
+        <TextView
+            android:text="@string/reps"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView8"
+            android:textSize="12pt"
+            android:layout_weight="0.2" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:text="@string/button1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="8pt"
+            android:id="@+id/button3"
+            android:layout_weight="1" />
+
+        <Button
+            android:text="@string/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="8pt"
+            android:id="@+id/button2"
+            android:layout_weight="1" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <Button
+            android:text="@string/back"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="8pt"
+            android:id="@+id/back_button" />
+    </LinearLayout>
 
 </LinearLayout>
